# sec-edgar-knowledge-graph

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
algorithms/: __init__.py  community_report.md  export_utils.py  louvain.py  neo4j_utils.py  pagerank.py  run_all.py  similarity.py
api/: __init__.py  csv_outputs.py  main.py
dashboard/: __init__.py  api_client.py  app.py
docs/: cypher_examples.md
extraction/: __init__.py  entity_resolution.py  filing_text.py  ner_pipeline.py  relation_extraction.py  run_sample.py
ingestion/: __init__.py  edgar_client.py  filing_downloader.py  sp500_loader.py
loading/: __init__.py  neo4j_loader.py  rdf_loader.py  review_export.py  sample_reader.py  validate.py
ontology/: README.md  financial_kg.ttl
tests/: test_api.py  test_dashboard.py  test_edgar_client.py  test_extraction.py  test_loading.py
