[project]
name = "sec-edgar-knowledge-graph"
version = "0.1.0"
description = "Financial knowledge graph over SEC EDGAR filings with Neo4j, OWL/RDF, SPARQL, graph algorithms, and LLM relation extraction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "pandas>=2.2.2",
    "pydantic>=2.8.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "ruff>=0.5.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ingestion*"]
